--- a/youtube.html
+++ b/youtube.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">   
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <link rel="stylesheet"  href="css/Youtube.css"/>
+    <link rel="stylesheet"  href="youtube.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="small-device.css" />
       
-    <script src="js/Youtube.js"></script> 
+    <script src="youtube.js"></script> 
     </head>
         <body> <!--start body-->
 
