--- a/youtube.html
+++ b/youtube.html
@@ -65,7 +65,7 @@
             <div class="row">
             <div  class="col-sm-6"> <!--start col-1-->
 
-			<iframe class="video"  width="800" height="450" src="https://www.youtube.com/embed/Y0jMD34a0nQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe class="video"  width="800" height="450" src="https://www.youtube.com/embed/GMjvRBbHtHc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<h5>Just 21 Days | India’s War Against Virus - Together We Can and We Will Fight This</h5>
 				
       		    <div class="row"> 
